--- a/_includes/_aside.html
+++ b/_includes/_aside.html
@@ -1,5 +1,5 @@
 <aside id="about-me">
-    <img src="/images/ed.png" alt="Photo of Eduard Fidiles">
+    <img src="/images/ed.jpg" alt="Photo of Eduard Fidiles">
     <h1>I'm Ed</h1>
     <p>and I freelance for individuals, startups, web agencies and large businesses.</p>
     <ul>
