increase paragraphs sizes

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -91,9 +91,9 @@ small,
 }
 
 p {
-  margin-top: .7em;
-  margin-bottom: .7em;
-  line-height: 1.4;
+  margin-top: 1.2em;
+  margin-bottom: 1.2em;
+  line-height: 1.5;
 }
 
 figure {
