tweak the styling of the code tag

--- a/_sass/_syntax.scss
+++ b/_sass/_syntax.scss
@@ -9,6 +9,8 @@
 
 code {
   font-family: 'Bitstream Vera Sans Mono','Courier', monospace;
+  background: #F7F6F6;
+  padding: 0 5px;
 }
 
 .highlight .c {
