Add LinkedIn link

--- a/_includes/_header.html
+++ b/_includes/_header.html
@@ -19,6 +19,9 @@
                 <li>
                     <a href="https://drive.google.com/open?id=0B5n5DBADSW2EU2dGQm03Nkk2cFE" target="_blank">CV</a>
                 </li>
+                <li>
+                    <a href="http://uk.linkedin.com/in/efidiles" target="_blank">LinkedIn</a>
+                </li>
             </ul>
         </nav>
         <strong>&lt;HTML&gt;</strong>
