update link to google drive
displays the content in list view and avoids some issues with the generated thumbnail not showing up

--- a/_includes/_header.html
+++ b/_includes/_header.html
@@ -14,7 +14,7 @@
                     <a href="/work"><span class="round">Work</a>
                 </li>
                 <li>
-                    <a href="https://drive.google.com/open?id=0B5n5DBADSW2EU2dGQm03Nkk2cFE" target="_blank">CV</a>
+                    <a href="https://drive.google.com/open?id=0B5n5DBADSW2EU2dGQm03Nkk2cFE#list" target="_blank">CV</a>
                 </li>
                 <li>
                     <a href="https://github.com/efidiles" target="_blank">GitHub</a>
