--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -1,4 +1,4 @@
 <footer>
     <a href="#main-header">Go to top</a>
-    <strong>&lt;/HTML&gt;</strong>
+    <strong>&lt;/script&gt;</strong>
 </footer>
