--- a/style.scss
+++ b/style.scss
@@ -12,11 +12,11 @@ $text: #21272d;
 $textmuted: #848484;
 $accent: #2077b2;
 
-$colorLink: #2780e3;
-$colorLinkHover: #165ba8;
+$colorLink: #464646;
+$colorLinkHover: #808080;
 $colorGray: #ccc;
 $colorBtnPrimary: #275780;
-$colorDarkBlue: #316591;
+$colorDarkBlue: #1A3C4E;
 
 $sizeBorder: 1px;
 $sizeGap: 1.5em;
