--- a/_includes/_header.html
+++ b/_includes/_header.html
@@ -2,7 +2,7 @@
         <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     <header id="main-header">
-        <nav> 
+        <nav>
             <a href="#">
                 Menu
             </a>
@@ -24,5 +24,5 @@
                 </li>
             </ul>
         </nav>
-        <strong>&lt;HTML&gt;</strong>
+        <strong>&lt;script&gt;</strong>
     </header>
