Update social media in sidebar

--- a/_includes/_aside.html
+++ b/_includes/_aside.html
@@ -4,6 +4,7 @@
     <p>and I freelance for individuals, startups, web agencies and large businesses.</p>
     <ul>
         <li>Twitter: <a href="https://twitter.com/efidiles" target="_blank">@efidiles</a></li>
-        <li>LinkedIn: <a href="https://uk.linkedin.com/in/eduardfidiles" target="_blank">eduardfidiles</a></li>
+        <li>LinkedIn: <a href="https://www.linkedin.com/in/efidiles" target="_blank">efidiles</a></li>
+        <li>Github: <a href="https://github.com/efidiles" target="_blank">efidiles</a></li>
     </ul>
 </aside>
